fix: respond to page overflow

--- a/src/app/components/layout/index.module.css
+++ b/src/app/components/layout/index.module.css
@@ -14,6 +14,7 @@
   align-items: center;
   border: 1px solid var(--dark-white);
   margin-bottom: 5rem;
+  overflow: auto;
 }
 
 @media (max-width: 1000px) {
